--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,11 @@
 }
 
 .color-primary {
-  color: #014852 !important;
+  color: #161D38 !important;
 }
 
 .color-secondary {
-  color: #ED544C !important;
+  color: #B89F80 !important;
 }
 
 .border-light {
@@ -233,7 +233,7 @@ b {
 
 .owl-carousel.nav-center .owl-nav button {
   position: absolute;
-  color: #014852 !important;
+  color: #161D38 !important;
   font-size: 40px !important;
   width: 90px;
   height: 70px;
@@ -342,329 +342,134 @@ b {
 }
 
 .main-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  transition: all 0.4s;
-  height: 100vh;
-  width: 200px;
-  z-index: 10;
-  font-size: 15px;
-  transition: all 1.4s cubic-bezier(0.81, 0.42, 0.33, 1);
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav {
-    width: 100vw;
-    height: 80px;
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .main-nav {
-    font-size: 13px;
-  }
-}
-
-.main-nav__inner {
-  opacity: 0;
-  pointer-events: none;
-  transition: all 1.4s cubic-bezier(0.81, 0.42, 0.33, 1);
-  color: #fff;
-  padding-left: 140px;
-  width: 400px;
-  margin-top: 60px;
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__inner {
-    padding-left: 0;
-    padding-top: 30px;
-    margin-top: 9px;
-    text-align: center;
-    width: 100vw;
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .main-nav__inner {
-    padding-top: 0;
-  }
-}
-
-.main-nav__inner a {
-  color: #fff;
-}
-
-.main-nav__bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: rgba(0, 58, 66, 0.9);
-  height: 100vh;
-  width: 130px;
-  z-index: 1;
-  transition: all 1.4s cubic-bezier(0.81, 0.42, 0.33, 1);
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__bg {
-    height: 76px;
-    width: 100vw;
-  }
-}
-
-.main-nav.active {
-  pointer-events: all;
-  width: 400px;
-}
-
-.main-nav.active .main-nav__bg {
+  background-color: #161D38;
   width: 100%;
+  padding: 40px 0;
 }
 
-@media screen and (max-width: 992px) {
-  .main-nav.active .main-nav__bg {
-    height: 100vh;
-    width: 100vw;
+@media screen and (max-width: 768px) {
+  .main-nav {
+    padding: 26px 0;
   }
 }
 
-.main-nav.active .main-nav__brand img {
-  margin-bottom: 35px;
-  margin-left: 118px;
-  margin-top: -14px;
-  width: 137px;
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav.active .main-nav__brand img {
-    margin: 0;
-    width: 93px;
-    margin-left: 11px;
-    margin-top: 8px;
-  }
-}
-
-@media screen and (max-height: 690px) and (min-width: 992px) {
-  .main-nav.active .main-nav__brand img {
-    width: 110px;
-  }
-}
-
-.main-nav.active .main-nav__inner {
-  pointer-events: all;
-  opacity: 1;
-  margin-top: 0;
+.main-nav .container {
+  position: relative;
 }
 
 .main-nav__content {
-  position: relative;
-  z-index: 2;
-  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media screen and (max-width: 992px) {
-  .main-nav__content {
-    width: 100vw;
+.main-nav__links {
+  position: absolute;
+  right: 0;
+  top: 17px;
+  opacity: 0;
+  background-color: #B89F80;
+  padding: 53px 40px 48px 82px;
+  width: 350px;
+  transition: all 0.4s;
+  pointer-events: none;
+  z-index: 10;
+  overflow: hidden;
+  transform: translateY(-30px);
+}
+
+@media screen and (max-width: 768px) {
+  .main-nav__links {
+    width: 75vw;
+    top: 0px;
+    right: 20px;
   }
 }
 
-.main-nav__brand {
-  margin-left: 22px;
+.main-nav__links.active {
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(0px);
+}
+
+.main-nav__links li {
+  color: #161D38;
+  margin-bottom: 4px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 330px) {
+  .main-nav__links li {
+    font-size: 15px;
+  }
 }
 
 @media screen and (max-width: 992px) {
-  .main-nav__brand {
-    margin-left: 9px;
-    margin-top: 10px;
+  .main-nav__links li {
+    font-size: 18px;
   }
+}
+
+.main-nav__links li:hover, .main-nav__links li.active {
+  color: #fff;
+}
+
+.main-nav__links li a {
+  color: inherit;
+  transition: all 0.4s;
+}
+
+.main-nav__links .close {
+  position: absolute;
+  top: 17px;
+  right: 23px;
+  opacity: 1;
+  outline: none !important;
+}
+
+.main-nav__links .close img {
+  width: 10px;
 }
 
 .main-nav__brand img {
-  width: 84px;
-  transition: all 1.4s cubic-bezier(0.81, 0.42, 0.33, 1);
+  width: 360px;
+}
+
+@media screen and (max-width: 768px) {
+  .main-nav__brand img {
+    width: 260px;
+  }
 }
 
 .main-nav__toggler {
   position: relative;
-  margin-top: 28px;
-  margin-bottom: 30px;
-  margin-left: 46px;
-  border: none;
-  background: none;
-  transition: all 1s;
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__toggler {
-    order: 2;
-    transform: translateX(-40px);
-    margin-top: 23px;
-  }
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
   .main-nav__toggler {
-    order: 2;
-    transform: translateX(-17px);
-    margin-top: 23px;
+    padding-right: 6px;
+  }
+}
+
+.main-nav__toggler img {
+  width: 9.8px;
+}
+
+@media screen and (max-width: 768px) {
+  .main-nav__toggler img {
+    width: 7px;
   }
 }
 
 .main-nav__toggler::after {
   content: '';
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 50px;
-  height: 50px;
-}
-
-.main-nav__toggler:focus {
-  border: none;
-  outline: none;
-}
-
-.main-nav__toggler div {
   width: 35px;
-  height: 1.9px;
-  background-color: #fff;
-  margin-top: 6px;
-  margin-right: -14px;
-  transition: all 1.4s cubic-bezier(0.81, 0.42, 0.33, 1);
-}
-
-.main-nav__toggler div:first-child, .main-nav__toggler div:last-child {
-  margin-left: -6px;
-}
-
-.main-nav__toggler.active {
-  transform: translateX(-15px);
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__toggler.active {
-    transform: translateX(-60px);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .main-nav__toggler.active {
-    transform: translateX(-33px);
-  }
-}
-
-.main-nav__toggler.active div:nth-child(1) {
-  transform: rotate(45deg) translateX(45%);
-  margin-left: 0;
-}
-
-.main-nav__toggler.active div:nth-child(3) {
-  transform: rotate(-45deg) translateX(45%);
-  margin-left: 0;
-  margin-top: 12px;
-}
-
-.main-nav__toggler.active div:nth-child(2) {
-  opacity: 0;
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__top {
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-  }
-}
-
-.main-nav__links li {
-  text-transform: uppercase;
-  letter-spacing: 0.4px;
-  margin-bottom: 12px;
-}
-
-@media screen and (max-height: 690px) and (min-width: 992px) {
-  .main-nav__links li {
-    font-size: 14px;
-  }
-}
-
-.main-nav__links li a {
-  position: relative;
-  transition: all 0.6s;
-}
-
-.main-nav__links li a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 2px;
-  width: 0;
-  height: 4px;
-  z-index: -1;
-  background-color: #ED544C;
-  transition: all 0.3s ease-in;
-  opacity: 0;
-}
-
-.main-nav__links li a:hover {
-  font-weight: bold;
-}
-
-.main-nav__links li a:hover::after {
-  opacity: 1;
-  width: calc(100% + 10px);
-}
-
-.main-nav__contacts {
-  padding-top: 64px;
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__contacts {
-    padding-top: 30px;
-  }
-}
-
-@media screen and (max-height: 690px) and (min-width: 992px) {
-  .main-nav__contacts {
-    padding-top: 20px;
-  }
-}
-
-.main-nav__contacts .langs {
-  padding-top: 20px;
-}
-
-@media screen and (max-width: 992px) {
-  .main-nav__contacts .langs {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.main-nav__contacts .langs .bar {
-  display: block;
-  height: 21px;
-  width: 0.8px;
-  margin: 0 4px;
-  background-color: #fff;
-}
-
-.main-nav__contacts .langs a {
-  padding: 0 4px;
-  transition: all 0.4s;
-}
-
-.main-nav__contacts .langs a:first-child {
-  padding-left: 0;
-}
-
-.main-nav__contacts .langs a.active, .main-nav__contacts .langs a:hover {
-  font-weight: bold;
-  color: #ED544C;
+  height: 35px;
+  left: -15px;
+  top: -10px;
 }
 
 .form-control {
@@ -835,119 +640,11 @@ textarea.form-control {
   color: black;
 }
 
-.main-footer {
-  position: relative;
-  padding: 110px 0 130px 0;
-  color: #484848;
-  word-wrap: break-word;
-}
-
-.main-footer .container {
-  position: relative;
-}
-
-@media screen and (max-width: 768px) {
-  .main-footer {
-    padding: 20px 0 60px;
-  }
-  .main-footer .main-img {
-    width: 120px;
-  }
-}
-
-.main-footer .main-img {
-  margin-bottom: 20px;
-}
-
-.main-footer h3 {
-  font-weight: bold;
-  font-size: 28px;
-}
-
-@media screen and (max-width: 768px) {
-  .main-footer h3 {
-    font-size: 22px;
-  }
-}
-
-.main-footer p {
-  font-size: 18px;
-}
-
-@media screen and (max-width: 768px) {
-  .main-footer p {
-    font-size: 16px;
-  }
-}
-
-.main-footer h4 {
-  text-transform: uppercase;
-  font-size: 30px;
-}
-
-@media screen and (max-width: 768px) {
-  .main-footer h4 {
-    font-size: 24px;
-  }
-}
-
-.main-footer h6 {
-  color: #484848;
-  font-size: 19px;
-  margin-bottom: 3px;
-  font-weight: bold;
-}
-
-.main-footer .right-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  position: relative;
-  padding-left: 102px;
-}
-
-@media screen and (max-width: 1400px) {
-  .main-footer .right-content {
-    padding-left: 130px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .main-footer .right-content {
-    padding-left: 15px;
-    margin-top: 20px;
-    width: 98%;
-    border-top: 1px solid #b4b4b4;
-  }
-}
-
-.main-footer .right-content::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 30px;
-  width: 1px;
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 100%;
-}
-
-@media screen and (max-width: 1400px) {
-  .main-footer .right-content::after {
-    left: 60px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .main-footer .right-content::after {
-    display: none;
-  }
-}
-
 body {
   position: relative;
   margin: 0;
   background-color: #FAFAFA;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Opens Sans', sans-serif;
   overflow-x: hidden;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
