--- a/partials/__head.html
+++ b/partials/__head.html
@@ -2,7 +2,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>SK Tarpon • Mais do que uma gestora, um HUB de empreendedorismo.</title>
+        <title>Paulo Freitas Ribeiro • Advogados associados</title>
         <link rel="icon" href="/images/ico/favicon.png"/>
 
         <!-- Load META-TAGS for SEO -->
@@ -10,13 +10,13 @@
         <meta name="keywords" content=""/>
         <META NAME="Googlebot" CONTENT="index,follow">
         <META NAME="robots" CONTENT="index,follow">
-        <META NAME="Identifier-URL" CONTENT="http://www.sktarpon.com.br">
-        <META NAME="url" CONTENT="http://www.sktarpon.com.br">
+        <META NAME="Identifier-URL" CONTENT="http://www.paulofreitasribeiro.com.br">
+        <META NAME="url" CONTENT="http://www.paulofreitasribeiro.com.br">
         <META NAME="Language" CONTENT="PT-BR">
         <META NAME="content-language" CONTENT="pt-br">
         <META NAME="distribution" CONTENT="Global">
         <META NAME="coverage" CONTENT="Worldwide">
-        <META NAME="Author" CONTENT="SKTarpon">
+        <META NAME="Author" CONTENT="paulofreitasribeiro">
         <META NAME="Generator" CONTENT="">
         <meta
             name="description"
@@ -27,8 +27,8 @@
         <meta
             property="og:description"
             content="Mais do que uma gestura, um hub de empreendedorismo.">
-        <meta property="og:image" content="http://www.sktarpon.com.br">
-        <meta property="og:url" content="http://www.sktarpon.com.br">
+        <meta property="og:image" content="http://www.paulofreitasrribeiro.com.br">
+        <meta property="og:url" content="http://www.paulofreitasrribeiro.com.br">
         <meta property="og:type" content="website"/>
         <meta name="twitter:card" content="summary_large_image">
         <meta property="og:site_name" content="dom.com.br">
@@ -38,7 +38,8 @@
 
         <!-- Load Font -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
         <!-- Vendor JS -->
         <script src="../vendors/js/vendor.bundle.base.js" defer></script>
