--- a/partials/__main-nav.html
+++ b/partials/__main-nav.html
@@ -1,61 +1,43 @@
-<nav class="main-nav wow fadeInLeft" data-wow-delay="0.3s" id="main-nav">
-    <div class="main-nav__bg"></div>
-    <div class="main-nav__content">
-        <div class="main-nav__top">
-            <button data-toggle="main-nav" class="main-nav__toggler">
-                <div></div>
-                <div></div>
-                <div></div>
-            </button>
+<nav class="main-nav" data-wow-delay="0.3s" id="main-nav">
+    <div class="container">
+        <div class="main-nav__content">
             <div class="main-nav__brand">
                 <a href="../pages/index.html">
-                    <img src="../images/ico/logo.svg" alt="Logo SKTarpon">
+                    <img src="../images/ico/brand.png" alt="Logo Paulo Freitas Ribeiro"/>
                 </a>
             </div>
-        </div>
-        <div class="main-nav__inner">
-            <ul class="main-nav__links">
-                <li>
-                    <a href="../pages/index.html">Home</a>
-                </li>
-                <li>
-                    <a href="../pages/sobre.html">A SK Tarpon</a>
-                </li>
-                <li>
-                    <a href="../pages/nosso-dna.html">Nosso DNA</a>
-                </li>
-                <li>
-                    <a href="../pages/time.html">Nosso time</a>
-                </li>
-                <li>
-                    <a href="../pages/carreira.html">Carreiras</a>
-                </li>
-                <li>
-                    <a href="../pages/imprensa.html">Imprensa</a>
-                </li>
-            </ul>
 
-            <div class="main-nav__contacts">
-                <p>
-                    <b>+55 11 3074-5800</b>
-                    <br/>
-                    <b>comercial@tarpon.com.br</b>
-                </p>
-                <p>
-                    Av. Magalhães de Castro, 4800<br/>
-                    Torre 1, 12º andar
-                    <br/>
-                    São Paulo - SP - CEP 05679-010
-                </p>
-
-                <div class="langs">
-                    <a href="#" class="active">PT</a>
-                    |
-                    <a href="#">EN</a>
-                    |
-                    <a href="#">ESP</a>
-                </div>
+            <div class="main-nav__menu">
+                <buttton class="main-nav__toggler" data-toggle="nav-links">
+                    <img src="../images/ico/toggler.png" alt=""/>
+                </buttton>
+                <ul id="nav-links" class="main-nav__links">
+                    <button class="close" data-toggle="nav-links">
+                        <buttton class="toggler" data-active="false">        
+                            <img src="../images/ico/times.png" alt=""/>
+                        </buttton>
+                    </button>
+                    <li class="active">
+                        <a href="../pages/index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../pages/equipe.html">A equipe</a>
+                    </li>
+                    <li>
+                        <a href="../pages/escritorio.html">Escritório</a>
+                    </li>
+                    <li>
+                        <a href="../pages/areasdeatuacao.html">Áreas de atuação</a>
+                    </li>
+                    <li>
+                        <a href="../pages/imprensa.html">Imprensa</a>
+                    </li>
+                    <li>
+                        <a href="../pages/contato.html">Contato</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
+</div>
 </nav>
