--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ body {
     position: relative;
     margin: 0;
     background-color: #FAFAFA;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Opens Sans', sans-serif;
     overflow-x: hidden;
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
