--- a/partials/__footer.html
+++ b/partials/__footer.html
@@ -1,1 +1,6 @@
-<footer class="main-footer wow fadeInUp" data-wow-delay="0.3s"></footer>
+<footer class="main-footer wow fadeInUp" data-wow-delay="0.3s">
+   <div class="container">
+    <p>Paulo Freitas Ribeiro Advogados Associados <br/>
+        @2020 Todos os direitos reservados</p>
+   </div>
+</footer>
