--- a/partials/__main-nav.html
+++ b/partials/__main-nav.html
@@ -1,14 +1,14 @@
 <nav class="main-nav" data-wow-delay="0.3s" id="main-nav">
     <div class="container">
         <div class="main-nav__content">
-            <div class="main-nav__brand">
+            <div class="main-nav__brand wow fadeIn" data-wow-delay="0.2s">
                 <a href="../pages/index.html">
                     <img src="../images/ico/brand.png" alt="Logo Paulo Freitas Ribeiro"/>
                 </a>
             </div>
 
             <div class="main-nav__menu">
-                <buttton class="main-nav__toggler" data-toggle="nav-links">
+                <buttton class="main-nav__toggler wow fadeInRight" data-wow-delay="0.3s" data-toggle="nav-links">
                     <img src="../images/ico/toggler.png" alt=""/>
                 </buttton>
                 <ul id="nav-links" class="main-nav__links">
