--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,8 +17,8 @@
 body {
     position: relative;
     margin: 0;
-    background-color: #FAFAFA;
-    font-family: 'Opens Sans', sans-serif;
+    background-color: #fff;
+    font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
