--- a/scss/util/__trumps.scss
+++ b/scss/util/__trumps.scss
@@ -40,6 +40,10 @@
     color: $color-secondary !important;
 }
 
+.bg-secondary{
+    background-color: #B89F80 !important;
+}
+
 .border-light {
     border: .5px solid rgb(228, 228, 228) !important;
 }
