--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -1,3 +1,5 @@
 @import './_home-banner',
         './_links-tabs',
-        './_about-panels'
+        './_about-panels',
+        './_interna-content',
+        './_interna-header'
