--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -2,4 +2,5 @@
         './_links-tabs',
         './_about-panels',
         './_interna-content',
-        './_interna-header'
+        './_interna-header',
+        './_equipe-list'
