Add equipe integrante page

--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -3,4 +3,5 @@
         './_about-panels',
         './_interna-content',
         './_interna-header',
-        './_equipe-list'
+        './_equipe-list',
+        './_equipe-integrante'
