--- a/css/style.css
+++ b/css/style.css
@@ -1072,6 +1072,169 @@ textarea.form-control {
   box-decoration-break: clone;
 }
 
+.equipe-integrante {
+  padding: 50px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante {
+    padding: 30px 0;
+  }
+}
+
+.equipe-integrante .main-img {
+  width: 100%;
+  height: 540px;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante__others {
+    margin-bottom: 20px;
+  }
+}
+
+.equipe-integrante__others .item {
+  display: flex;
+  margin-bottom: -2px;
+}
+
+.equipe-integrante__others .item:hover img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.equipe-integrante__others .item .img {
+  width: 170px;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 992px) {
+  .equipe-integrante__others .item .img {
+    width: 140px;
+  }
+}
+
+.equipe-integrante__others .item .img img {
+  width: 100%;
+  min-height: 110px;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.4s;
+}
+
+@media screen and (max-width: 992px) {
+  .equipe-integrante__others .item .img img {
+    min-height: 100px;
+  }
+}
+
+.equipe-integrante__others .item .caption {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #b89f804d;
+  width: 100%;
+  color: #161D38;
+  font-weight: bold;
+  font-size: 26px;
+  text-align: center;
+  padding: 20px 60px;
+}
+
+@media screen and (max-width: 992px) {
+  .equipe-integrante__others .item .caption {
+    font-size: 22px;
+    padding: 20px 30px;
+    font-size: 20px;
+  }
+}
+
+.equipe-integrante .content {
+  padding: 0 30px;
+  padding-top: 15px;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante .content {
+    padding: 0;
+    padding-top: 10px;
+  }
+}
+
+.equipe-integrante .content .name {
+  color: #161D38;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 27px;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante .content .name {
+    font-size: 26px;
+    margin-bottom: 14px;
+  }
+}
+
+.equipe-integrante .content .email {
+  font-size: 21.5px;
+  margin-bottom: 32px;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante .content .email {
+    font-size: 19px;
+  }
+}
+
+.equipe-integrante .content .socials .ico {
+  width: 42px;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante .content .socials .ico {
+    width: 37px;
+  }
+}
+
+.equipe-integrante .content hr {
+  width: 105%;
+  margin-left: -5%;
+  border-color: #B89F80;
+  background-color: #B89F80;
+  height: 0.1px;
+  margin-top: 32px;
+  margin-bottom: 27px;
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-integrante .content hr {
+    margin-left: 0;
+    width: 100%;
+    margin-top: 25px;
+  }
+}
+
+.equipe-integrante .content .title {
+  display: block;
+  font-weight: bold;
+  color: #B89F80;
+  font-size: 22px;
+  margin-bottom: -3px;
+}
+
+.equipe-integrante .content .desc {
+  font-size: 19px;
+}
+
+.equipe-integrante .content .desc p {
+  margin-bottom: 20px;
+  font-weight: 400;
+}
+
 body {
   position: relative;
   margin: 0;
