--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -4,4 +4,5 @@
         './_interna-content',
         './_interna-header',
         './_equipe-list',
-        './_equipe-integrante'
+        './_equipe-integrante',
+        './_imprensa'
