Add areas atuacao page

--- a/partials/__main-nav.html
+++ b/partials/__main-nav.html
@@ -27,7 +27,7 @@
                         <a href="../pages/escritorio.html">Escritório</a>
                     </li>
                     <li>
-                        <a href="../pages/areasdeatuacao.html">Áreas de atuação</a>
+                        <a href="../pages/areasatuacao.html">Áreas de atuação</a>
                     </li>
                     <li>
                         <a href="../pages/imprensa.html">Imprensa</a>
