--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -5,4 +5,5 @@
         './_interna-header',
         './_equipe-list',
         './_equipe-integrante',
-        './_imprensa'
+        './_imprensa',
+        './_areasatuacao'
