--- a/css/style.css
+++ b/css/style.css
@@ -1457,6 +1457,96 @@ textarea.form-control {
   }
 }
 
+.areasatuacao {
+  position: relative;
+  padding: 52px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .areasatuacao {
+    padding: 32px 0;
+  }
+}
+
+.areasatuacao__item {
+  display: block;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .areasatuacao__item {
+    margin-bottom: 2px;
+  }
+}
+
+.areasatuacao__item:hover img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.areasatuacao__item .img {
+  position: relative;
+  height: 240px;
+  width: 100%;
+  overflow: hidden;
+  z-index: 2;
+}
+
+@media screen and (max-width: 768px) {
+  .areasatuacao__item .img {
+    height: 210px;
+  }
+}
+
+.areasatuacao__item .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.areasatuacao__item .caption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 4;
+  color: #fff;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 110px;
+}
+
+@media screen and (max-width: 768px) {
+  .areasatuacao__item .caption {
+    padding-right: 40px;
+    padding-left: 30px;
+  }
+}
+
+.areasatuacao__item .caption .title {
+  font-weight: lighter;
+  font-size: 43px;
+}
+
+@media screen and (max-width: 768px) {
+  .areasatuacao__item .caption .title {
+    font-size: 26px;
+  }
+}
+
 body {
   position: relative;
   margin: 0;
