--- a/scss/sections/__areasatuacao.scss
+++ b/scss/sections/__areasatuacao.scss
@@ -22,13 +22,13 @@
 
         .img{
             position: relative;
-            height: 240px;
+            height: 230px;
             width: 100%;
             overflow: hidden;
             z-index: 2;
 
             @media screen and (max-width: $bp-MD){
-                height: 210px;
+                height: 170px;
             }
 
             img{
@@ -67,6 +67,55 @@
                 @media screen and (max-width: $bp-MD){
                     font-size: 26px;
                 }
+
+                &.md{
+                    font-size: 40px;
+
+                    @media screen and (max-width: $bp-MD){
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
+    }
+
+    &__content{
+        padding-top: 18px;
+        max-width: 460px;
+        
+        @media screen and (max-width: $bp-MD){
+            padding-top: 0px;
+        }
+
+        .title{
+            color: $color-primary;
+            font-size: 38px;
+            font-weight: lighter;
+            padding: 0 3px;
+
+            @media screen and (max-width: $bp-MD){
+                font-size: 30px;
+            }
+        }
+
+        .desc{
+            font-size: 19px;
+            text-align: justify;
+
+            @media screen and (max-width: $bp-MD){
+                font-size: 17px;
+                padding-bottom: 15px;
+            }
+        }
+
+        hr{
+            border-color: $color-secondary;
+            background-color: $color-secondary;
+            height: .2px;
+            margin: 30px 0;
+
+            @media screen and (max-width: $bp-MD){
+                margin: 22px 0;
             }
         }
     }
