--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -6,4 +6,5 @@
         './_equipe-list',
         './_equipe-integrante',
         './_imprensa',
+        './_contato',
         './_areasatuacao'
