--- a/scss/sections/__interna-content.scss
+++ b/scss/sections/__interna-content.scss
@@ -65,6 +65,7 @@
         p{
             font-size: 20px;
             line-height: 1.2;
+            text-align: justify;
 
             @media screen and (max-width: $bp-MD){
                 font-size: 16px;
