--- a/scss/sections/__links-tabs.scss
+++ b/scss/sections/__links-tabs.scss
@@ -52,6 +52,7 @@
             font-size: 26px;
             padding-top: 25px;
             padding-bottom: 14px;
+            letter-spacing: 0.1px;
 
             @media screen and (max-width: $bp-MD){
                 font-size: 23px;
