--- a/css/style.css
+++ b/css/style.css
@@ -804,6 +804,7 @@ textarea.form-control {
   font-size: 26px;
   padding-top: 25px;
   padding-bottom: 14px;
+  letter-spacing: 0.1px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1003,6 +1004,7 @@ textarea.form-control {
 .interna-content__markup p {
   font-size: 20px;
   line-height: 1.2;
+  text-align: justify;
 }
 
 @media screen and (max-width: 768px) {
@@ -1503,10 +1505,10 @@ textarea.form-control {
   border: 1px solid #B89F80;
   color: #B89F80;
   width: 100%;
-  height: 45px;
-  padding-left: 24px;
-  margin-bottom: 23px;
-  font-size: 20px;
+  height: 46px;
+  padding-left: 29px;
+  margin-bottom: 24px;
+  font-size: 21.6px;
 }
 
 @media screen and (max-width: 768px) {
